maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: missing arguments for method ceil in object Math;
follow this method with `_' if you want to treat it as a partially applied function
  Math.ceil
       ^ShortestPathMaze:19: error: not found: value _X
  while(_X.size != 0){
        ^ShortestPathMaze:20: error: not found: value _X
    var _X_ : Array[Int] = new Array[Int] (4*_X.size)
                                             ^ShortestPathMaze:21: error: not found: value _Y
    var _Y_ : Array[Int] = new Array[Int] (4*_Y.size)
                                             ^ShortestPathMaze:22: error: not found: type int
    var _N_ : Array[Int] = new Array[int] (4*_N.size)
                                     ^ShortestPathMaze:22: error: not found: value _N
    var _N_ : Array[Int] = new Array[int] (4*_N.size)
                                             ^ShortestPathMaze:24: error: not found: value _X
    for(it <- 0 to _X.size -1){
                   ^ShortestPathMaze:26: error: not found: value _X
      if(_X(it) != -1){
         ^ShortestPathMaze:27: error: not found: value _X
        var x = _X(it)
                ^ShortestPathMaze:28: error: not found: value _Y
        var y = _Y(it)
                ^ShortestPathMaze:29: error: not found: value _N
        var num = _N(it)
                  ^